--- a/selectores/index.html
+++ b/selectores/index.html
@@ -14,7 +14,15 @@
     <h1>ejemplo 3</h1>
     <h2 id="hoja">ejemplo 4</h2>
     <div>
-        <p>ejemplo 5</p>
+        <article>
+            <h1>Titular o nombre</h1>
+            <p>Texto descriptivo similar a una entradilla.</p>
+        </article>
+        <h2>ejemplo 5.0</h2>
     </div>
+    
+    <p>ejemplo 6</p>
+    <h2>ejemplo 6.0</h2>
+    <h3>ejemplo 6.1</h3>
 </body>
 </html>
